# DetectText

./: CMakeLists.txt  FeaturesMain.cpp  TextDetection.cpp  TextDetection.h
